--- a/css/logowanie.css
+++ b/css/logowanie.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap");
 *, *::before, *::after {
   margin: 0;
   padding: 0;
@@ -6,10 +8,45 @@
 }
 
 body {
+  font-family: "Open Sans", sans-serif;
+}
+
+.container {
+  background-image: url("../images/background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
-  background-color: #fff;
-  font-family: "Open Sans", sans-serif;
+}
+
+.go-back {
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 200px;
+  margin: 20px;
+  padding: 10px;
+  box-shadow: 0px 0px 20px -10px rgba(2, 2, 3, 0.7);
+  text-decoration: none;
+  background-color: #1aebb7;
+  color: #fff;
+  border-radius: 10px;
+  font-size: 20px;
+  text-align: center;
+  transition: all 0.2s ease-in-out;
+}
+.go-back .fa-arrow-left {
+  margin: 0 10px;
+}
+.go-back span {
+  line-height: 30px;
+}
+.go-back:hover {
+  opacity: 0.7;
+  transition: all 0.2s ease-in-out;
 }
 
 .login {
