--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap');
 
 *, *::before, *::after{
     margin: 0;
@@ -8,5 +10,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    // font-family: 'Montserrat', sans-serif;
+    // font-family: 'Lato', sans-serif;
 }
 
