--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,12 @@
 @mixin flex-c-c{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+@mixin flex-spc-even-c{
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
 }
