--- a/scss/main-page.scss
+++ b/scss/main-page.scss
@@ -1,3 +1,117 @@
 @import './variables';
 @import './globals';
 @import './mixins';
+
+
+body{
+    overflow-x: hidden;
+}
+
+.background{
+    background-image: url('../images/background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    height: 100vh;
+    width: 100vw;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+
+
+    &__nav{
+        background-color: $white;
+        height: 70px;
+        width: 100%;
+    }
+
+    &__logo{
+        float: right;
+        display: flex;
+        // border: 1px solid red;
+        height: 100%;
+        h1{
+            color: $cyan-green;
+            line-height: 50px;
+            padding: 10px;
+            text-align: center;
+            font-weight: 700;
+            letter-spacing: 1px;
+        }
+
+        .fa-laptop-code{
+            margin: auto;
+            margin-right: 35px;
+            margin-left: 5px;
+            color: $cyan-green;
+            font-size: 40px;
+        }
+    }
+
+    &__grid{
+        align-self: center;
+        
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 80px;
+        // border: 2px solid red;
+
+        margin-top: 10%;
+    }
+
+    &__btn{
+        align-self: center;
+
+        height: 330px;
+        width: 520px;
+        background-color: $white;
+        box-shadow: -8px 8px 20px 0px rgba(26,235,183,0.5);
+        // box-shadow: -10px 10px 30px 0px rgba(0,0,0,0.5);
+        // border-radius: 10px;
+        // border: 2px solid $light-grey;
+        border: 1px solid rgba(26,235,183,0.2);
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        color: $cyan-green;
+        text-decoration: none;
+
+        .fas{
+            margin-top: 12%;
+            font-size: 8em;
+        }
+
+        h2{
+            margin-top: 10px;
+        }
+
+        p{
+            font-style: italic;
+        }
+        transition: transform .2s ease-in-out;
+
+        &:hover{
+            transform: translate(20px, -20px);
+            transition: transform .2s ease-in-out;
+        }
+    }
+}
+
+footer{
+    @include flex-spc-even-c;
+    background-color: $cyan-green;
+    height: 100px;
+    color: $white;
+    text-align: left;
+
+    .contact{
+        p{
+            border: none;
+
+        }
+    }
+}
