--- a/css/main-page.css
+++ b/css/main-page.css
@@ -29,6 +29,7 @@ body {
   flex-direction: column;
 }
 .container__nav {
+  position: fixed;
   background-color: #fff;
   height: 70px;
   width: 100%;
@@ -58,7 +59,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 80px;
-  margin-top: 10%;
+  margin-top: 15%;
 }
 .container__btn {
   align-self: center;
