zrobienie panelu wyceny projektu

--- a/scss/main-page.scss
+++ b/scss/main-page.scss
@@ -8,12 +8,7 @@ body{
 }
 
 .background{
-    background-image: url('../images/background.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    height: 100vh;
-    width: 100vw;
+    @include background-img;
 }
 
 .container{
@@ -29,11 +24,11 @@ body{
     }
 
     &__logo{
-        float: right;
         display: flex;
-        // border: 1px solid red;
+        float: right;
         height: 100%;
         h1{
+            font-size: 2em;
             color: $cyan-green;
             line-height: 50px;
             padding: 10px;
