--- a/css/main-page.css
+++ b/css/main-page.css
@@ -1,6 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap");
 *, *::before, *::after {
   margin: 0;
   padding: 0;
@@ -35,11 +33,12 @@ body {
   width: 100%;
 }
 .container__logo {
-  float: right;
   display: flex;
+  float: right;
   height: 100%;
 }
 .container__logo h1 {
+  font-size: 2em;
   color: #1aebb7;
   line-height: 50px;
   padding: 10px;
