--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -10,3 +10,56 @@
     justify-content: space-evenly;
     align-items: center;
 }
+
+@mixin background-img{
+    background-image: url('../images/background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    height: 100vh;
+    width: 100vw;
+}
+
+@mixin nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: $white;
+    height: 70px;
+    width: 100%;
+}
+
+@mixin nav__logo{
+    display: flex;
+    float: right;
+    height: 100%;
+    h1{
+        color: $cyan-green;
+        line-height: 50px;
+        padding: 10px;
+        text-align: center;
+        font-weight: 700;
+        letter-spacing: 1px;
+    }
+
+    .fa-laptop-code{
+        margin: auto;
+        margin-right: 35px;
+        margin-left: 5px;
+        color: $cyan-green;
+        font-size: 40px;
+    }
+}
+
+@mixin footer{
+    background-color: $cyan-green;
+    height: 100px;
+    color: $white;
+    text-align: left;
+
+    .contact{
+        p{
+            border: none;
+        }
+    }
+}
