--- a/css/klienci_mod.css
+++ b/css/klienci_mod.css
@@ -9,10 +9,100 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .container {
+  display: flex;
+  justify-content: center;
   width: 100vw;
-  height: 100vh;
-  background-color: #dfe6e9;
+  height: 100%;
+  background-image: url("../images/background2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container .main-content {
+  margin-top: 70px;
+  width: 1000px;
+}
+
+.form-box {
+  margin: 50px 20px;
+  background-color: #fff;
+  min-height: 600px;
+}
+.form-box h1 {
+  color: #1aebb7;
+  text-align: center;
+  padding: 15px;
+  text-transform: lowercase;
+}
+.form-box__add {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.form-box__add form {
+  margin: 20px 0 40px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  grid-gap: 15px 0;
+  width: 60%;
+}
+.form-box__add form label {
+  grid-column: 1/2;
+  padding: 0 20px;
+  text-align: center;
+  color: #1aebb7;
+  font-size: 1.2em;
+  font-weight: 600;
+}
+.form-box__add form input {
+  border-radius: 5px;
+  border: none;
+  outline: 2px solid #dfe6e9;
+  height: 35px;
+  grid-column: 2/3;
+  margin: 0 20px;
+  width: 80%;
+  padding: 10px;
+  font-size: 1.1em;
+  color: #1aebb7;
+}
+.form-box__add form input:focus {
+  outline: 2px solid #1aebb7;
+}
+.form-box__add form input[type=submit] {
+  grid-column: 1/3;
+  width: 30%;
+  height: 50px;
+  border: none;
+  outline: none;
+  justify-self: center;
+  margin-top: 10px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #1aebb7;
+  letter-spacing: 1px;
+  font-weight: 500;
+  transition: all 0.2s ease-in-out;
+}
+.form-box__add form input[type=submit]:hover {
+  opacity: 0.7;
+  transform: translateY(5px);
+}
+.form-box__add h3 {
+  margin: 20px 0;
+  font-size: 1em;
+  font-weight: 600;
+}
+.form-box__add .ok {
+  color: #2ecc71;
+}
+.form-box__add .wrong {
+  color: red;
 }
 
 .nav {
@@ -22,6 +112,7 @@ body {
   background-color: #fff;
   height: 70px;
   width: 100%;
+  box-shadow: 0 2px 4px -2px #1aebb7;
 }
 .nav p {
   position: fixed;
@@ -105,6 +196,9 @@ body {
   top: 12px;
 }
 
+.hamburger--active {
+  transform: translateX(350px);
+}
 .hamburger--active .hamburger__inner {
   background-color: transparent;
 }
@@ -116,12 +210,54 @@ body {
 }
 
 .menu {
+  display: flex;
+  justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
   background-color: #1aebb7;
   width: 350px;
   height: 100vh;
+  transform: translateX(-350px);
+  transition: transform 0.2s ease-in-out;
+}
+.menu__list {
+  margin-top: 200px;
+}
+.menu__item {
+  margin: 50px 0;
+  list-style-type: none;
+  text-align: center;
+}
+.menu__item a {
+  font-size: 1.8em;
+  text-decoration: none;
+  color: #fff;
+  text-transform: lowercase;
+}
+.menu__item a::after {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
+  display: block;
+  content: "";
+  width: 0%;
+  height: 2px;
+  border-radius: 2px;
+  background-color: #fff;
+  transition: width 0.2s ease-in-out;
+}
+.menu__item a:hover::after {
+  width: 100%;
+}
+.menu__item a .fas {
+  font-size: 0.9em;
+}
+.menu__item:last-child {
+  margin-top: 50%;
+}
+.menu--active {
+  transform: translateX(0px);
 }
 
 /*# sourceMappingURL=klienci_mod.css.map */
