--- a/scss/klienci_mod.scss
+++ b/scss/klienci_mod.scss
@@ -2,17 +2,115 @@
 @import './globals';
 @import './mixins';
 
+body{
+    overflow-x: hidden;
+}
 
 .container{
+    display: flex;
+    justify-content: center;
     width: 100vw;
-    height: 100vh;
-    background-color: $light-grey;
+    height: 100%;
+    background-image: url('../images/background2.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    .main-content{
+        // border: 2px solid red;
+        margin-top: 70px;
+        width: 1000px;
+        // height: 3000px;
+    }
+}
+
+.form-box{
+    margin: 50px 20px;
+    background-color: $white;
+    min-height: 600px;
+
+     h1{
+        color: $cyan-green;
+        text-align: center;
+        padding: 15px;
+        text-transform: lowercase;
+    }
+
+    &__add{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        form{
+            margin: 20px 0 40px;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(7, 1fr);
+            grid-gap: 15px 0;
+            width: 60%;
+
+            label{
+                grid-column: 1/2;
+                padding: 0 20px;
+                text-align: center;
+                color: $cyan-green;
+                font-size: 1.2em;
+                font-weight: 600;
+            }
+
+            input{
+                border-radius: 5px;
+                border: none;
+                outline: 2px solid $light-grey;
+                height: 35px;
+                grid-column: 2/3;
+                margin: 0 20px;
+                width: 80%;
+                padding: 10px;
+                font-size: 1.1em;
+                color: $cyan-green;
+
+                &:focus{
+                    outline: 2px solid $cyan-green;
+                }
+            }
+
+            input[type=submit]{
+                grid-column: 1/3;
+                width: 30%;
+                height: 50px;
+                border: none;
+                outline: none;
+                justify-self: center;
+                margin-top: 10px;
+                cursor: pointer;
+                color: $white;
+                background-color: $cyan-green;
+                letter-spacing: 1px;
+                font-weight: 500;
+                transition: all .2s ease-in-out;
+
+                &:hover{
+                    opacity: 0.7;
+                    transform: translateY(5px);
+                }
+            }
+        }
+
+        h3{
+            margin: 20px 0;
+            font-size: 1em;
+            font-weight: 600;
+        }
+
+        .ok{ color: $emerald; }
+        .wrong{ color: red; }
+    }
 }
 
 
 .nav{
     // display: flex;
     @include nav;
+    box-shadow: 0 2px 4px -2px $cyan-green;
 
     p{
         position: fixed;
@@ -103,6 +201,7 @@
 }
 
 .hamburger--active{
+    transform: translateX(350px);
 
     .hamburger__inner{
         background-color: transparent;
@@ -117,13 +216,68 @@
     }   
 }
 
-
 .menu{
+    display: flex;
+    justify-content: center;
+
     position: fixed;
     top: 0;
     left: 0;
     background-color: $cyan-green;
     width: 350px;
     height: 100vh;
+    transform: translateX(-350px);
+    transition: transform .2s ease-in-out;
+
+    &__list{
+        margin-top: 200px;
+    }
+
+    &__item{
+        // border: 2px solid red;
+        margin: 50px 0;
+        list-style-type: none;
+        text-align: center;
+        a{
+            font-size: 1.8em;
+            text-decoration: none;
+            color: $white;
+            text-transform: lowercase;
+
+            &::after{
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 5px;
+                display: block;
+                content: '';
+                // width: 100%;
+                width: 0%;
+                height: 2px;
+                border-radius: 2px;
+                background-color: $white;
+                transition: width .2s ease-in-out;
+            }
+
+            &:hover{
+                &::after{
+                    width: 100%;
+                }
+            }
+
+            .fas{
+                font-size: .9em;
+            }
+        }
+
+        &:last-child{
+            margin-top: 50%;
+        }
+
+
+    }
+
+    &--active{
+        transform: translateX(0px);
+    }
 }
 
