--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -71,3 +71,59 @@
     background-color: $cyan-green;
     position: absolute;
 }
+
+
+@mixin form-mod-styles{
+    width: 80%;
+
+    .action-form {
+
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+
+        label{
+            margin: 0 20px;
+            color: $cyan-green;
+            font-size: 1.2em;
+            font-weight: 600;
+        }
+
+        input[type=number]{
+            height: 35px;
+            width: 100px;
+            margin: 0 20px;
+            border: none;
+            outline: 2px solid $light-grey;
+            border-radius: 5px;
+            color: $cyan-green;
+            padding: 10px;
+            font-size: 1.1em;
+
+            &:focus{
+                outline: 2px solid $cyan-green;
+            }
+        }
+
+        input[type=submit]{
+            padding: 10px;
+            height: 40px;
+            width: 90px;
+            color: $white;
+            background-color: red;
+            border: none;
+            border-radius: 5px;
+            font-weight: 500;
+            font-size: 1em;
+            letter-spacing: 1px;
+            transition: all .2s ease-in-out;
+
+            &:hover{
+                opacity: 0.7;
+                transform: translateY(-5px);
+            }
+        }
+    }
+}
