--- a/scss/klienci_mod.scss
+++ b/scss/klienci_mod.scss
@@ -15,14 +15,13 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     .main-content{
-        // border: 2px solid red;
         margin-top: 70px;
         width: 1000px;
-        // height: 3000px;
     }
 }
 
 .form-box{
+    // style ogólne
     margin: 50px 20px;
     background-color: $white;
     min-height: 600px;
@@ -34,6 +33,70 @@ body{
         text-transform: lowercase;
     }
 
+    h3{
+        margin: 20px 0;
+        font-size: 1em;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    .ok{ color: $emerald; }
+    .wrong{ color: red; }
+
+    .search-form-box{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // border: 2px solid red;
+        padding: 10px;
+        margin-top: 30px;
+        margin-bottom: 20px;
+
+        label{
+            color: $cyan-green;
+            font-size: 1.2em;
+            font-weight: 600;
+        }
+
+        input[name=input_search]{
+            height: 35px;
+            width: 100px;
+            margin: 0 20px;
+            border: none;
+            outline: 2px solid $light-grey;
+            border-radius: 5px;
+            color: $cyan-green;
+            padding: 10px;
+            font-size: 1.1em;
+
+            &:focus{
+                outline: 2px solid $cyan-green;
+            }
+        }
+
+        input[name=search]{
+            padding: 10px;
+            height: 40px;
+            width: 90px;
+            color: $white;
+            background-color: $cyan-green;
+            border: none;
+            border-radius: 5px;
+            font-weight: 500;
+            font-size: 1em;
+            letter-spacing: 1px;
+            transition: all .2s ease-in-out;
+            cursor: pointer;
+
+            &:hover{
+                opacity: 0.7;
+                transform: translateY(-5px);
+            }
+        }
+    }
+
+
+    // moduł dodawania
     &__add{
         display: flex;
         flex-direction: column;
@@ -87,6 +150,7 @@ body{
                 letter-spacing: 1px;
                 font-weight: 500;
                 transition: all .2s ease-in-out;
+                cursor: pointer;
 
                 &:hover{
                     opacity: 0.7;
@@ -94,17 +158,136 @@ body{
                 }
             }
         }
+    }
 
-        h3{
-            margin: 20px 0;
-            font-size: 1em;
-            font-weight: 600;
+    // moduł usuwania 
+    &__del{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: 500px;
+
+        form{ @include form-mod-styles};
+
+            // alert
+            p{
+                text-align: center;
+                color: red;
+                font-size: 1em;
+                font-weight: 500;
+            }
+
+            // table
+            table, td, th{
+                border: 2px solid $cyan-green;
+                border-collapse: collapse;
+                padding: 10px;
+                color: $cyan-green;
+                text-align: center;
+            }
         }
 
-        .ok{ color: $emerald; }
-        .wrong{ color: red; }
+    // moduł modyfikacji
+    &__mod{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        form{ @include form-mod-styles }
+
+        .search-form-box{
+            input[type=number]{
+                height: 35px;
+                width: 100px;
+                margin: 0 20px;
+                border: none;
+                outline: 2px solid $light-grey;
+                border-radius: 5px;
+                color: $cyan-green;
+                padding: 10px;
+                font-size: 1.1em;
+    
+                &:focus{
+                    outline: 2px solid $cyan-green;
+                }
+            }
+        }
+
+        p{
+            text-align: center;
+            color: red;
+            font-size: 1em;
+            font-weight: 500;
+        }
+
+        // table
+        table, td, th{
+            border: 2px solid $cyan-green;
+            border-collapse: collapse;
+            padding: 10px;
+            color: $cyan-green;
+            text-align: center;
+        }
+
+        .modify-box{
+            margin: 20px auto;
+            width: 60%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: repeat(7, 1fr);
+            grid-gap: 5px;
+            align-items: center;
+
+            label{
+                grid-column: 1/2;
+                color: $cyan-green;
+                text-align: center;
+                font-size: 1.2em;
+            }
+
+            input[type=text], input[type=number]{
+                grid-column: 2/3;
+                height: 35px;
+                border: none;
+                border-radius: 5px;
+                outline: 2px solid $light-grey;
+                padding: 10px;
+                color: $cyan-green;
+                font-size: 1.1em;
+
+                &:focus{
+                    outline: 2px solid $cyan-green;
+                }
+            }
+
+            input[type=submit]{
+                grid-column: 1/3;
+                width: 30%;
+                height: 50px;
+                border: none;
+                border-radius: 5px;
+                outline: none;
+                justify-self: center;
+                margin-top: 10px;
+                cursor: pointer;
+                color: $white;
+                background-color: $cyan-green;
+                letter-spacing: 1px;
+                font-weight: 500;
+                font-size: 1.1em;
+                transition: all .2s ease-in-out;
+                cursor: pointer;
+
+                &:hover{
+                    opacity: 0.7;
+                    transform: translateY(-5px);
+                }
+            }
+        }
+
     }
 }
+
 
 
 .nav{
@@ -153,6 +336,8 @@ body{
     }
 }
 
+
+
 .hamburger{
     position: fixed;
     display: inline-block;
@@ -199,6 +384,8 @@ body{
 
     transition: all .2s ease-in-out;
 }
+
+
 
 .hamburger--active{
     transform: translateX(350px);
