--- a/scss/wycena.scss
+++ b/scss/wycena.scss
@@ -107,7 +107,7 @@ body {overflow-x: hidden};
                         &1::after{ content: '+ 500zł'; }
                         &2::after{ content: '+ 50zł / szt'; }
                         &3::after{ content: '+ 600zł '; }
-                        &4::after{ content: 'express: +20%'; }
+                        &4::after{ content: 'ekspres: +20%'; }
                         &5::after{ content: '+ 600zł'; }
                     }
                 }
