skonczona aplikacja, wszystkie podstrony gotowe

--- a/css/panel.css
+++ b/css/panel.css
@@ -29,12 +29,14 @@ body {
   margin-top: 70px;
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(3, 500px);
-  grid-template-rows: repeat(2, 300px);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   grid-gap: 50px;
   margin-bottom: 50px;
 }
 .main-content a {
+  width: 350px;
+  height: 250px;
   display: block;
   box-shadow: -4px 4px 10px 0px rgba(0, 0, 0, 0.2);
   background-color: #fff;
@@ -44,7 +46,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 2em;
+  font-size: 1.7em;
   transition: all 0.2s ease-in-out;
 }
 .main-content a h3 {
