--- a/css/spotkania.css
+++ b/css/spotkania.css
@@ -103,9 +103,10 @@ body {
 .form-box__add form {
   margin: 20px 0 40px;
   display: grid;
+  align-items: center;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(7, 1fr);
-  grid-gap: 15px 0;
+  grid-template-rows: repeat(6, 1fr);
+  grid-gap: 10px 0;
   width: 60%;
 }
 .form-box__add form label {
@@ -130,6 +131,12 @@ body {
 }
 .form-box__add form input:focus {
   outline: 2px solid #1aebb7;
+}
+.form-box__add form input::placeholder {
+  color: #dfe6e9;
+  font-size: 0.8em;
+  font-weight: 600;
+  text-align: center;
 }
 .form-box__add form input[type=submit] {
   grid-column: 1/3;
@@ -158,7 +165,7 @@ body {
   min-height: 500px;
 }
 .form-box__del form {
-  width: 80%;
+  width: 85%;
 }
 .form-box__del form .action-form {
   margin-top: 20px;
@@ -217,13 +224,16 @@ body {
   color: #1aebb7;
   text-align: center;
 }
+.form-box__del table {
+  margin: 0 auto;
+}
 .form-box__mod {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .form-box__mod form {
-  width: 80%;
+  width: 85%;
 }
 .form-box__mod form .action-form {
   margin-top: 20px;
@@ -296,12 +306,15 @@ body {
   color: #1aebb7;
   text-align: center;
 }
+.form-box__mod table {
+  margin: 0 auto;
+}
 .form-box__mod .modify-box {
   margin: 20px auto;
   width: 60%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-rows: repeat(6, 1fr);
   grid-gap: 5px;
   align-items: center;
 }
@@ -345,6 +358,27 @@ body {
 .form-box__mod .modify-box input[type=submit]:hover {
   opacity: 0.7;
   transform: translateY(-5px);
+}
+.form-box__mod .modify-box input {
+  border-radius: 5px;
+  border: none;
+  outline: 2px solid #dfe6e9;
+  height: 35px;
+  grid-column: 2/3;
+  margin: 0 20px;
+  width: 80%;
+  padding: 10px;
+  font-size: 1.1em;
+  color: #1aebb7;
+}
+.form-box__mod .modify-box input:focus {
+  outline: 2px solid #1aebb7;
+}
+.form-box__mod .modify-box input::placeholder {
+  color: #dfe6e9;
+  font-size: 0.8em;
+  font-weight: 600;
+  text-align: center;
 }
 
 .nav {
@@ -502,4 +536,4 @@ body {
   transform: translateX(0px);
 }
 
-/*# sourceMappingURL=klienci_mod.css.map */
+/*# sourceMappingURL=spotkania.css.map */
