--- a/css/pracownicy.css
+++ b/css/pracownicy.css
@@ -95,6 +95,54 @@ body {
   opacity: 0.7;
   transform: translateY(-5px);
 }
+.form-box__addToMet {
+  height: 300px;
+}
+.form-box__addToMet form {
+  width: 70%;
+  margin: 100px auto 20px;
+}
+.form-box__addToMet .search-form-box {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  justify-content: center;
+  align-items: center;
+  grid-gap: 30px 20px;
+}
+.form-box__addToMet .search-form-box label, .form-box__addToMet .search-form-box input {
+  justify-self: center;
+}
+.form-box__addToMet .search-form-box input[type=number] {
+  height: 35px;
+  width: 100px;
+  margin: 0 20px;
+  border: none;
+  outline: 2px solid #dfe6e9;
+  border-radius: 5px;
+  color: #1aebb7;
+  padding: 10px;
+  font-size: 1.1em;
+}
+.form-box__addToMet .search-form-box input[type=number]:focus {
+  outline: 2px solid #1aebb7;
+}
+.form-box__addToMet .search-form-box input[type=submit] {
+  grid-column: 1/3;
+  padding: 10px;
+  width: 120px;
+  font-size: 1em;
+  letter-spacing: 1px;
+  border: none;
+  background-color: #1aebb7;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.form-box__addToMet .search-form-box input[type=submit]:hover {
+  opacity: 0.7;
+}
 .form-box__add {
   display: flex;
   flex-direction: column;
