--- a/scss/pracownicy.scss
+++ b/scss/pracownicy.scss
@@ -95,6 +95,61 @@ body{
         }
     }
 
+    &__addToMet{
+        height: 300px;
+        form{
+            width: 70%;
+            margin: 100px auto 20px;
+        }
+
+        .search-form-box{
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            justify-content: center;
+            align-items: center;
+            grid-gap: 30px 20px;
+
+            label, input{
+                justify-self: center;
+            }
+
+            input[type=number]{
+                height: 35px;
+                width: 100px;
+                margin: 0 20px;
+                border: none;
+                outline: 2px solid $light-grey;
+                border-radius: 5px;
+                color: $cyan-green;
+                padding: 10px;
+                font-size: 1.1em;
+    
+                &:focus{
+                    outline: 2px solid $cyan-green;
+                }
+            }
+
+            input[type=submit]{
+                grid-column: 1/3;
+                padding: 10px;
+                width: 120px;
+                font-size: 1em;
+                letter-spacing: 1px;
+                border: none;
+                background-color: $cyan-green;
+                color: $white;
+                border-radius: 5px;
+                cursor: pointer;
+
+                &:hover{
+                    opacity: 0.7;
+                }
+            }
+        }
+    }
+
 
     // moduł dodawania
     &__add{
