--- a/scss/klienci.scss
+++ b/scss/klienci.scss
@@ -177,6 +177,8 @@ body{
                 font-weight: 500;
             }
 
+            table{ margin: 0 auto; }
+
             // table
             table, td, th{
                 border: 2px solid $cyan-green;
@@ -185,6 +187,7 @@ body{
                 color: $cyan-green;
                 text-align: center;
             }
+
         }
 
     // moduł modyfikacji
