--- a/scss/pracownicy.scss
+++ b/scss/pracownicy.scss
@@ -232,6 +232,8 @@ body{
                 font-weight: 500;
             }
 
+            table{ margin: 0 auto; }
+
             // table
             table, td, th{
                 border: 2px solid $cyan-green;
